--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Diversity & Inclusion</title>    
+    
     <style>
         .navbar-custom {
             color: #3B2F2F;
@@ -25,16 +26,126 @@
             top: 0;
             z-index: 1000;
         }
+
+        /* target the class used in the HTML and add overlay + responsive sizing */
+        .hero-section {
+            /* overlay for readable text */
+            background-image:
+                linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
+                url('assets/images/hero.png');
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            background-attachment: scroll;
+            color: white;
+            /* responsive padding and minimum height for good hero presence */
+            padding: clamp(3rem, 10vw, 8rem) 0;
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        /* Center the Information h2 */
+        #information h2 {
+            text-align: center;
+        }
+
+        /* Card hover/focus effect for all sections */
+        .card {
+            transition: transform .25s ease, box-shadow .25s ease;
+            will-change: transform;
+        }
+        .card:hover,
+        .card:focus-within {
+            transform: translateY(-6px) scale(1.012);
+            box-shadow: 0 18px 40px rgba(0,0,0,0.14);
+        }
+
+        /* Ensure all card images use the same aspect and fill space */
+        .card-img-top {
+            width: 100%;
+            aspect-ratio: 4 / 3;       /* equal width/height ratio across cards */
+            object-fit: cover;         /* crop to fill while preserving aspect */
+            display: block;
+        }
+
+        /* Building section card: make the left image match the other cards' visual height */
+        #building .card .row {
+            min-height: 240px; /* gives the building card a consistent visual height */
+        }
+        #building .card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        /* Small-screen adjustments */
+        @media (max-width: 767.98px) {
+            #building .card .row {
+                min-height: auto;
+            }
+            /* on very small screens use a squarer/landscape ratio to save vertical space */
+            .card-img-top {
+                aspect-ratio: 16 / 9;
+            }
+        }
+
+        /* placeholder style for fallback images */
+        .img-placeholder {
+            background: #f5f5f5 url('assets/images/placeholder.png') center/60px no-repeat;
+            object-fit: cover;
+        }
+
+        /* Reduce size and add hover color change for card "Learn more" buttons */
+        .card .btn {
+            padding: 0.38rem 0.8rem;      /* smaller button */
+            font-size: 0.9rem;           /* slightly smaller text */
+            border-radius: 0.375rem;
+            align-self: center;          /* center horizontally in the flex column */
+            display: block;
+            margin: 0.5rem auto 0;       /* small top gap and center */
+            transition: background-color .18s ease, color .18s ease, transform .12s ease, box-shadow .18s ease;
+            box-shadow: none;
+        }
+
+        /* brand button colors (replace default bootstrap primary for card buttons) */
+        :root{
+          --brand: #6B2FB5;      /* primary (matches theme-color / hero) */
+          --brand-dark: #572694; /* hover/active */
+        }
+
+        .card .btn.btn-primary {
+          background-color: var(--brand);
+          border-color: var(--brand);
+          color: #fff;
+        }
+        .card .btn.btn-primary:hover,
+        .card .btn.btn-primary:focus {
+          background-color: var(--brand-dark);
+          border-color: var(--brand-dark);
+          box-shadow: 0 8px 20px rgba(87,38,148,0.14);
+          transform: translateY(-2px);
+          color: #fff;
+        }
+
+        .card .btn:active {
+            transform: translateY(0);
+            box-shadow: none;
+        }
     </style>
 </head>
 
 <body>
-
+        <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/logo.png" alt="Logo" width="100" height="100">
-                diversity & inclusion
+                Diversity & Inclusion
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +154,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Information</a>
+                        <a class="nav-link" href="#information">Information</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Take Action</a>
@@ -59,9 +170,169 @@
         </div>
     </nav>
 
+    <div class="container-fluid hero-section text-center">
+        <h1 class="display-4">Welcome to Diversity & Inclusion</h1>
+        <p class="lead">where discrimination ends and acceptance begins.</p>
+        <a href="#" class="btn btn-light btn-lg">Contact Us</a>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <main id="main-content" class="container py-5">
+
+      <!-- About / Information cards -->
+      <section id="information" class="mb-5">
+        <h2 class="mb-4">Information</h2>
+        <div class="row g-4">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="assets/images/diversity.png"
+                class="card-img-top img-fluid"
+                alt="Diverse group of people holding hands in a circle"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">What is Diversity?</h5>
+                <p class="card-text">
+                  Diversity means having a mix of people with different characteristics, backgrounds, and experiences.
+                </p>
+                <ul class="mb-3">
+                  <li>Race</li>
+                  <li>Gender</li>
+                  <li>Age</li>
+                </ul>
+                <a
+                  href="https://en.wikipedia.org/wiki/Diversity_(humanities)"
+                  target="_blank"
+                  rel="noopener"
+                  class="mt-auto btn btn-primary"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="assets/images/diversity2.png"
+                class="card-img-top img-fluid"
+                alt="People collaborating at a table"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Why Inclusion Matters?</h5>
+                <p class="card-text">
+                  Inclusion ensures everyone feels valued and respected, regardless of their differences.
+                </p>
+                <ul class="mb-3">
+                  <li>Belonging</li>
+                  <li>Respect</li>
+                  <li>Collaboration</li>
+                </ul>
+                <a
+                  href="https://en.wikipedia.org/wiki/Inclusion_(education)"
+                  target="_blank"
+                  rel="noopener"
+                  class="mt-auto btn btn-primary"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- centered on md (tablet): col-md-6 centered with offset-md-3; no offset on lg -->
+          <div class="col-12 col-md-6 offset-md-3 offset-lg-0 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="assets/images/community.png"
+                class="card-img-top img-fluid"
+                alt="Hands together in unity"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Building Community</h5>
+                <p class="card-text">
+                  Building understanding and community helps break down barriers and fosters growth for all.
+                </p>
+                <ul class="mb-3">
+                  <li>Support</li>
+                  <li>Growth</li>
+                  <li>Empowerment</li>
+                </ul>
+                <a
+                  href="https://diversityuk.org/"
+                  target="_blank"
+                  rel="noopener"
+                  class="mt-auto btn btn-primary"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Building Understanding section (wide card with image on left on md+) -->
+      <section id="building" class="mb-5">
+        <h2 class="mb-4">Building Understanding</h2>
+        <div class="card shadow-sm">
+          <div class="row g-0 align-items-center">
+            <div class="col-12 col-md-4">
+              <img
+                src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=896997035761160"
+                class="img-fluid rounded-start"
+                alt="People collaborating"
+                style="object-fit:cover; height:100%; width:100%;"
+              />
+            </div>
+            <div class="col-12 col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Building Understanding</h5>
+                <p class="card-text">
+                  Building understanding of inclusion and diversity starts with education, open communication, and self-awareness.
+                  By listening to others, challenging personal biases, and promoting inclusive practices, we can create environments
+                  where everyone feels valued, respected, and able to contribute fully.
+                </p>
+                <a href="https://en.wikipedia.org/wiki/Diversity,_equity,_and_inclusion" class="btn btn-primary">Learn more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    
+    <script src="https://fonts.googleapis.com/css2?family=Handle&display=swap"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+   <!-- Smooth scroll to in-page anchors and auto-collapse mobile menu after click -->
+   <script>
+     (function () {
+       // handle all nav links that point to in-page anchors
+       document.querySelectorAll('a.nav-link[href^="#"]').forEach(function (link) {
+         link.addEventListener('click', function (e) {
+           var targetId = this.getAttribute('href');
+           if (!targetId || targetId === '#' || targetId === '#!') return;
+           var targetEl = document.querySelector(targetId);
+           if (!targetEl) return;
+           e.preventDefault();
+           // Smooth scroll
+           targetEl.scrollIntoView({ behavior: 'smooth', block: 'start' });
+           // Collapse navbar on small screens if open
+           var bsCollapseEl = document.querySelector('.navbar-collapse');
+           if (bsCollapseEl && bsCollapseEl.classList.contains('show')) {
+             var bsCollapse = bootstrap.Collapse.getOrCreateInstance(bsCollapseEl);
+             bsCollapse.hide();
+           }
+           // improve keyboard focus
+           targetEl.setAttribute('tabindex', '-1');
+           targetEl.focus({ preventScroll: true });
+         });
+       });
+     })();
+   </script>
 </body>
 
 </html>
