change css style from inline to external stylesheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Diversity & Inclusion</title>
 
     <!-- Favicons (use your logo files at the paths below) -->
@@ -16,273 +17,6 @@
     <link rel="manifest" href="assets/site.webmanifest">
     <meta name="theme-color" content="#6B2FB5">
 
-    <style>
-    :root{
-      --brand: #6B2FB5;
-      --brand-dark: #572694;
-    }
-    .navbar-custom {
-        color: #3B2F2F;
-    }
-
-    .navbar-custom .nav-link {
-        color: #3B2F2F;
-    }
-
-    .navbar-custom .nav-link.active {
-        font-weight: bold;
-    }
-
-    .navbar {
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-    }
-
-    /* target the class used in the HTML and add overlay + responsive sizing */
-    .hero-section {
-        /* overlay for readable text */
-        background-image:
-            linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
-            url('assets/images/hero.png');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-        background-attachment: scroll;
-        color: white;
-        /* responsive padding and minimum height for good hero presence */
-        padding: clamp(3rem, 10vw, 8rem) 0;
-        min-height: 60vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-
-    /* Center the Information h2 */
-    #information h2 {
-        text-align: center;
-    }
-
-    /* Card hover/focus effect for all sections */
-    .card {
-        transition: transform .25s ease, box-shadow .25s ease;
-        will-change: transform;
-    }
-    .card:hover,
-    .card:focus-within {
-        transform: translateY(-6px) scale(1.012);
-        box-shadow: 0 18px 40px rgba(0,0,0,0.14);
-    }
-
-    /* Ensure all card images use the same aspect and fill space */
-    .card-img-top {
-        width: 100%;
-        aspect-ratio: 4 / 3;       /* equal width/height ratio across cards */
-        object-fit: cover;         /* crop to fill while preserving aspect */
-        display: block;
-    }
-
-    /* Building section card: make the left image match the other cards' visual height */
-    #building .card .row {
-        min-height: 240px; /* gives the building card a consistent visual height */
-    }
-    #building .card img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-    }
-
-    /* Small-screen adjustments */
-    @media (max-width: 767.98px) {
-        #building .card .row {
-            min-height: auto;
-        }
-        /* on very small screens use a squarer/landscape ratio to save vertical space */
-        .card-img-top {
-            aspect-ratio: 16 / 9;
-        }
-    }
-
-    /* placeholder style for fallback images */
-    .img-placeholder {
-        background: #f5f5f5 url('assets/images/placeholder.png') center/60px no-repeat;
-        object-fit: cover;
-    }
-
-    /* Reduce size and add hover color change for card "Learn more" buttons */
-    .card .btn {
-        padding: 0.38rem 0.8rem;      /* smaller button */
-        font-size: 0.9rem;           /* slightly smaller text */
-        border-radius: 0.375rem;
-        align-self: center;          /* center horizontally in the flex column */
-        display: block;
-        margin: 0.5rem auto 0;       /* small top gap and center */
-        transition: background-color .18s ease, color .18s ease, transform .12s ease, box-shadow .18s ease;
-        box-shadow: none;
-    }
-
-    .card .btn.btn-primary {
-      background-color: var(--brand);
-      border-color: var(--brand);
-      color: #fff;
-    }
-    .card .btn.btn-primary:hover,
-    .card .btn.btn-primary:focus {
-      background-color: var(--brand-dark);
-      border-color: var(--brand-dark);
-      box-shadow: 0 8px 20px rgba(87,38,148,0.14);
-      transform: translateY(-2px);
-      color: #fff;
-    }
-
-    .card .btn:active {
-        transform: translateY(0);
-        box-shadow: none;
-    }
-
-    /* Footer / social styles (reverted to plain, clean layout) */
-    footer#contact a { color: inherit; }
-    .social-link {
-      color: var(--brand);
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border-radius: 6px;
-      transition: transform .16s ease, color .16s ease, background .16s ease;
-    }
-    .social-link:hover, .social-link:focus {
-      color: #fff;
-      background: var(--brand-dark);
-      transform: translateY(-3px);
-      text-decoration: none;
-    }
-
-    /* Footer layout & modern contact styles (simple white background) */
-    footer#contact { background: #fff; }
-    footer#contact .footer-contact p { margin-bottom: .5rem; }
-    footer#contact .contact-pill {
-      display: inline-flex;
-      gap: .5rem;
-      align-items: center;
-      padding: .35rem .6rem;
-      border-radius: 999px;
-      border: 1px solid rgba(0,0,0,0.06);
-      background: linear-gradient(180deg, rgba(255,255,255,0.9), rgba(250,250,250,0.9));
-      color: #222;
-      text-decoration: none;
-      font-size: .9rem;
-      box-shadow: 0 4px 14px rgba(107,47,181,0.06);
-    }
-    footer#contact .contact-pill svg { width: 16px; height: 16px; opacity: .9; }
-
-    /* layout: left contact, center copyright, right social on md+ */
-    footer#contact .footer-contact { text-align: left; }
-    footer#contact .footer-copy { text-align: center; display:flex; align-items:center; justify-content:center; }
-    footer#contact .footer-social { text-align: right; display:flex; justify-content:flex-end; align-items:center; gap:.5rem; }
-
-    /* mobile: stack and center everything */
-    @media (max-width: 767.98px) {
-      footer#contact .footer-contact,
-      footer#contact .footer-copy,
-      footer#contact .footer-social { text-align:center; justify-content:center; }
-      footer#contact .footer-social { margin-top:.5rem; }
-    }
-
-    /* --- Enhanced footer styles (replace/append) --- */
-    footer#contact {
-      background:
-        radial-gradient(1200px 400px at 10% 10%, rgba(107,47,181,0.08), transparent 20%),
-        linear-gradient(180deg, #ffffff 0%, #fbf8ff 100%);
-      padding: 3.5rem 0;
-    }
-
-    .footer-wrap {
-      background: linear-gradient(180deg, rgba(255,255,255,0.78), rgba(255,255,255,0.6));
-      border-radius: 14px;
-      padding: 1.25rem;
-      box-shadow: 0 18px 50px rgba(11,18,39,0.06);
-      backdrop-filter: blur(6px);
-    }
-
-    .footer-grid { gap: 1rem; display: grid; grid-template-columns: 1fr 1fr 1fr; align-items: center; }
-    .footer-col { padding: .5rem 1rem; }
-
-    .footer-brand { display:flex; gap:.75rem; align-items:center; }
-    .footer-brand img { width:48px; height:48px; object-fit:contain; border-radius:8px; }
-    .footer-brand h5 { margin:0; font-size:1.05rem; letter-spacing:.2px; }
-    .footer-brand .tag { color: #6b6b78; font-size:.85rem; }
-
-    /* contact pills (modern look) */
-    .contact-pill {
-      display:inline-flex;
-      gap:.5rem;
-      align-items:center;
-      padding:.4rem .6rem;
-      border-radius:999px;
-      border:1px solid rgba(11,18,39,0.06);
-      background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(250,250,250,0.9));
-      color:#222;
-      text-decoration:none;
-      font-size:.9rem;
-      margin-right:.5rem;
-    }
-
-    .contact-pill svg { width:16px; height:16px; opacity:.95 }
-
-    /* newsletter */
-    .newsletter { display:flex; gap:.5rem; align-items:center; justify-content:center; }
-    .newsletter input {
-      flex:1;
-      min-width:150px;
-      padding:.55rem .75rem;
-      border:1px solid rgba(11,18,39,0.08);
-      border-radius:10px;
-      background:#fff;
-    }
-    .newsletter .btn {
-      padding:.48rem .9rem;
-      border-radius:10px;
-      background:var(--brand);
-      border:1px solid var(--brand);
-      color:#fff;
-      box-shadow: 0 8px 20px rgba(107,47,181,0.12);
-    }
-    .newsletter .btn:hover { background:var(--brand-dark); border-color:var(--brand-dark); transform:translateY(-2px); }
-
-    /* social */
-    .footer-social { display:flex; justify-content:flex-end; gap:.5rem; align-items:center; }
-    .social-link { width:44px; height:44px; display:inline-flex; align-items:center; justify-content:center; border-radius:8px; color:var(--brand); background:transparent; border:1px solid rgba(11,18,39,0.04); transition:all .18s ease; }
-    .social-link:hover { transform:translateY(-4px); color:#fff; background:var(--brand-dark); box-shadow: 0 8px 30px rgba(87,38,148,0.12); text-decoration:none; }
-
-    .footer-copy { text-align:center; color:#7b7890; }
-
-    /* responsive adjustments */
-    @media (max-width: 991.98px) {
-      .footer-grid { grid-template-columns: 1fr; text-align:center; }
-      .footer-social { justify-content:center; margin-top:.5rem; }
-      .footer-brand { justify-content:center; }
-    }
-    /* --- end enhanced footer styles --- */
-
-    /* Enquiries image column: make image match the form height on md+ */
-    #enquiries .card .row { align-items: stretch; }
-    #enquiries .img-col { padding: 0; } /* remove column padding so image fills */
-    #enquiries .form-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-    /* small screens: allow image to flow above the form with natural height */
-    @media (max-width: 767.98px) {
-      #enquiries .form-image { height: auto; }
-    }
-    </style>
 </head>
 
 <body>
