add carousel to the hero section

--- a/index.html
+++ b/index.html
@@ -51,9 +51,32 @@
     </nav>
 
     <div class="container-fluid hero-section text-center">
-        <h1 class="display-4">Welcome to Diversity & Inclusion</h1>
-        <p class="lead">where discrimination ends and acceptance begins.</p>
-        <a href="#contact" class="btn btn-light btn-lg">Contact Us</a>
+        <!-- background carousel -->
+        <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel" data-bs-interval="3500" aria-hidden="true">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/images/hero.png" class="d-block w-100" alt="Inclusive team" loading="lazy">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/diversity.png" class="d-block w-100" alt="Diverse group" loading="lazy">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/community.png" class="d-block w-100" alt="Community support" loading="lazy">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/inclusion.png" class="d-block w-100" alt="Community support" loading="lazy">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/images/diversity2.png" class="d-block w-100" alt="Community support" loading="lazy">
+            </div>
+          </div>
+        </div>
+
+        <div class="hero-content">
+            <h1 class="display-4">Welcome to Diversity & Inclusion</h1>
+            <p class="lead">where discrimination ends and acceptance begins.</p>
+            <a href="#contact" class="btn btn-light btn-lg">Contact Us</a>
+        </div>
     </div>
 
     <!-- MAIN CONTENT -->
